src/styles/_home.sass
// We don't need to include the underscore when referring to a partial
@use 'variables'
@use 'sass:map'

body

    & .home-carousel-btn
        color: map.get(variables.$feedU-theme, "background-color")
        // margin-right: 20px
        // margin-left: 20px
        font-size: 2em

    #navigation-menu-hamburger
        position: absolute
        left: 15px
        top: 15px

    #home-main-content-container
        display: flex
        flex-direction: column

    .user-delivery-location-details
        display: flex
        justify-content: center
        align-items: center

        #deliver-now-txt
            margin-right: 5px

        #user-home-delivery-location
            overflow: hidden
            white-space: nowrap
            text-overflow: ellipsis

    #home-favourite-vendor-stories-container
        display: grid
        grid-auto-flow: column
        gap: 25px
        overflow: auto

        #favourite-vendor-story
            margin: 0.25em 0.25em
            width: 40px
            height: 40px

    .home-categories-container
        display: grid
        grid-template-columns: repeat(auto-fill, 50px)
        justify-items: center
        column-gap: 25px
        grid-auto-flow: column
        overflow: auto

        // #category-item
        //     margin: 0em 0.50em

    .all-poi-container
        display: grid
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr))

        .poi-container
            display: flex
            flex: 1 1 auto
            justify-content: top
            height: 65px
            width: 335px
            margin-bottom: 20px

        .poi-image
            float: left
            width: 64px
            height: 64px
            object-fit: cover

        .poi-details
            display: flex
            flex-direction: column
            width: 100%
            float: right
            margin-left: 5%

        .poi-catergory-container
            display: flex
            align-items: center
            margin-top: 0.30em
            font-size: 12px

        #poi-catergory
            margin-right: 0.75em
            font-size: 6px
            color: #C4C4C4

        .poi-rating-bar-container
            display: flex
            align-items: top
            margin-top: 2%
            font-size: 12px

        .poi-rating-bar
            display: flex
            justify-content: center
            align-items: center
            height: 20px
            width: 70px
            font-size: 11px
            background: #F2F2F2
            border-radius: 25px

        #poi-rate-star-icon
            color: #F2C94C

        #poi-no-of-rated-customers
            margin-left: 0.25em
            font-size: 9px

        #poi-delivery-time
            display: flex
            align-items: center
            margin-left: 0.50em

    @media screen and ( min-width: variables.$dimens_ipad)
        .ui-panel-dismiss
            display: none // This disables the ability to dismiss the panel on larger screens

        #home-main-content-container
            display: grid
            grid-template-columns: 85% 15%
            grid-template-rows: 0.1fr 1fr

        #home-favourite-stories-section
            grid-row-start: 1
            grid-row-end: 3
            grid-column-start: 2
            display: flex
            flex-direction: column
            align-items: center
            border-left: 5px solid map.get(variables.$feedU-theme, "light-gray")
            margin-left: 20px

        #home-favourite-vendor-stories-container
            grid-auto-flow: row

            // .favourite-vendor-story
            //     margin: 10px 0.25em

        #navigation-menu-hamburger
            display: none // Hide the hamburger icon on larger screens to make the panel non-collapsible

